# ews-rs

./: Cargo.toml  README.md  clippy.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
ews/: Cargo.toml
ews/src/: interop.rs  lib.rs  test_utils.rs  types.rs
ews/src/types/: common.rs  copy_folder.rs  copy_item.rs  create_item.rs  empty_folder.rs  find_item.rs  get_item.rs  mark_all_read.rs  mark_as_junk.rs  move_folder.rs  move_item.rs  soap.rs  update_folder.rs
ews/src/types/common/: response.rs
ews_macros/: Cargo.toml
ews_proc_macros/: Cargo.toml
ews_proc_macros/src/: lib.rs
src/: lib.rs  types.rs
src/types/: common.rs  common_response.rs  copy_item.rs  create_folder.rs  create_item.rs  delete_folder.rs  delete_item.rs  get_folder.rs  get_item.rs  move_folder.rs  move_item.rs  operations.rs  soap.rs  sync_folder_hierarchy.rs  sync_folder_items.rs  update_folder.rs  update_item.rs  update_junk_status.rs
src/types/common/: message_xml.rs  response.rs
src/types/soap/: de.rs
