[package]
name = "ews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
xml_struct = { version = "0.1.0", path = "../xml_struct/xml_struct" }
