[package]
name = "ews_proc_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the ews crate."
categories = ["data-structures"]
keywords = ["exchange", "ews", "exchange web services"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/thunderbird/ews-rs"
exclude = [".github", ".vscode"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
